Fix scrolling cutoff in imageModal

--- a/www/style.css
+++ b/www/style.css
@@ -66,12 +66,12 @@ hr {
 
 #bigImg {
     overflow: auto;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    flex-shrink: 0;
+    scroll-margin: 5vh 5vw;
 }
 
 #imageModal {
